fixed notification alerts
